# ApparitionLabs

./: README.md
apparitionlabs/: .gitignore  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
apparitionlabs/src-tauri/: Cargo.toml  tauri.conf.json
apparitionlabs/src-tauri/capabilities/: default.json
apparitionlabs/src-tauri/src/: config.rs  health.rs  history.rs  lib.rs
apparitionlabs/src/app/: layout.tsx  page.tsx  template.tsx
apparitionlabs/src/app/access/: page.tsx
apparitionlabs/src/app/api/status/: route.ts
apparitionlabs/src/app/api/webhook/uptime-kuma/: route.ts
apparitionlabs/src/components/: QuickAccessCard.tsx  ServerGrid.tsx  ThemeProvider.tsx
apparitionlabs/src/components/access/: AccessView.tsx
apparitionlabs/src/components/history/: HistoryView.tsx
apparitionlabs/src/components/layout/: Background.tsx  PageShell.tsx
apparitionlabs/src/components/monitoring/: AccessModal.tsx  MonitoringDashboard.tsx  ServerCard.tsx  Sparkline.tsx  SummaryBar.tsx
apparitionlabs/src/components/settings/: SettingsView.tsx
apparitionlabs/src/hooks/: useAppConfig.ts  useMonitoring.ts  useStatus.ts
apparitionlabs/src/lib/: api.ts  defaults.ts  monitoring-display.ts  types.ts
