[package]
name = "app"
version = "1.0.0"
description = "ApparitionLabs - Server Monitoring Dashboard"
authors = ["Samuel Dingle"]
license = "GPL-3.0"
repository = "https://github.com/samueldingle/ApparitionLabs"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
